Auth page [WIP]

--- a/src/pages/auth/auth.scss
+++ b/src/pages/auth/auth.scss
@@ -1,3 +1,8 @@
 page-auth {
-
+    .auth-bg {
+        background-image: url('../../assets/img/stormwind.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center center;
+    }
 }
